# ifac-camsat-2025-timeseries-transformer

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: dataset-scaled-time.npz
models/: feature-scaler-scaled-time.npz  ground-truth-scaler-scaled-time.npz  m0300_best_epoch_1400_valloss_0.2429.pt  m0602_best_epoch_4940_valloss_0.6589.pt
notebooks/: anti_csv.ipynb  data-agg.ipynb  generate-plots.ipynb  initial-state-exploration.ipynb  omni-exploration.ipynb  sat-density-exploration.ipynb  train.ipynb
src/data/: dataset.py
src/data/prepare/: aggregate_datasets.py  features.py
src/model/: encoder.py  loss.py  refinement.py  residual.py  scaler.py
src/physics/: eclipse.py  msis_density.py  orekit_helpers.py  sample_orbit.py  solar_wind.py
