[project]
name = "mit-aero-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "orekit-jpype[jdk4py]>=13.1.1.0",
    "pandas>=2.3.3",
    "pymsis>=0.11.0",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.57.0",
    "wandb>=0.22.1",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
]
